--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -17,7 +17,7 @@
     },
     "sitemapLocation": "sitemap.json",
     "tabBar": {
-        "borderStyle":"black",
+        "borderStyle": "black",
         "color": "#000000",
         "selectedColor": "#f45359",
         "list": [
@@ -59,5 +59,6 @@
         "van-toast": "@vant/weapp/toast/index",
         "van-empty": "@vant/weapp/empty/index",
         "van-popup": "@vant/weapp/popup/index"
-    }
+    },
+    "__usePrivacyCheck__": true
 }
